# s2t

./: README.md
linux/: README.md
linux/systemd/user/: s2t.service
macos/: README.md  pyproject.toml  s2t  s2t.py
systemd/user/: s2t.service
