[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "s2t-macos"
version = "0.1.0"
description = "Speech-to-text dictation utility for macOS"
requires-python = ">=3.9"
dependencies = [
    "sounddevice>=0.4.6",
    "scipy>=1.10.0",
    "faster-whisper>=0.10.0",
    "pyperclip>=1.8.2",
    "numpy>=1.24.0",
]

[project.scripts]
s2t = "s2t:main"

[tool.setuptools]
py-modules = ["s2t"]
